# esbuild-namespace-issue

./: .bazelrc  .gitignore  .npmrc  BUILD.bazel  README.md  WORKSPACE.bazel  esbuild.config.mjs  esbuild_patched.bzl  example-decorator.ts  package.json  pnpm-lock.yaml  reproduce-issue.ts  tsconfig.bazel.json  tsconfig.json
